# systemoc-top

./: .gitignore  .gitmodules  Makefile.am  README.md  autoreconf.sh  configure.ac  forall-projects.sh  forall-sources-in.sh
boilerplate/: COPYRIGHTLINES  EDITORLINES
