# -*- tab-width:8; indent-tabs-mode:t; c-basic-offset:2; -*-
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (c)
#   2020 FAU -- Joachim Falk <joachim.falk@fau.de>
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

include $(auxdir)/jfrules.mk

# This is only needed if there is a configure.ac in this directory
ACLOCAL_AMFLAGS=-I BuildSystem/m4

SUBDIRS=@SUBDIRS@
